--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
 body {
-    background-color: #fff;
-    color: #000;
+    background-color: #f7f7f7;
+    color: #333;
     font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
+    padding: 0;
 }
 
 header {
@@ -21,17 +17,18 @@ header img {
 }
 
 .container {
-    width: 350px;
+    width: 90%;
+    max-width: 500px;
+    margin: 20px auto;
     padding: 20px;
     border-radius: 10px;
-    background-color: #f2f2f2;
+    background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    position: relative; /* Добавим позиционирование для новых элементов */
 }
 
 h2 {
     color: #ffcc00;
+    margin-bottom: 20px;
 }
 
 form {
@@ -43,39 +40,60 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="number"],
-input[type="text"] {
+input[type="text"],
+input[type="date"] {
     width: calc(100% - 22px);
-    padding: 8px;
+    padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
+    font-size: 16px;
+}
+
+input[type="text"] {
+    -webkit-appearance: none;
 }
 
 button[type="submit"] {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     background-color: #ffcc00;
-    color: #000;
+    color: #333;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 16px;
 }
 
 button[type="submit"]:hover {
     background-color: #ffdb4d;
 }
 
-/* Добавляем анимацию для класса "loading" */
-#loadingAnimation {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#resultMessage {
+    margin-top: 20px;
+    font-size: 18px;
 }
 
-#result {
-    font-size: 24px;
+#viewResult {
+    display: none;
     margin-top: 20px;
+    text-align: center;
+    font-size: 16px;
+    color: #333;
+    text-decoration: none;
+}
+
+@media (max-width: 500px) {
+    input[type="text"],
+    input[type="date"] {
+        width: calc(100% - 20px);
+    }
+}
+
+@media (max-width: 320px) {
+    input[type="text"],
+    input[type="date"] {
+        width: calc(100% - 10px);
+    }
 }
