--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body {
-    background-color: #f7f7f7;
-    color: #333;
+    background-color: #fff;
+    color: #000;
     font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     margin: 0;
-    padding: 0;
 }
 
 header {
@@ -17,18 +21,16 @@ header img {
 }
 
 .container {
-    width: 90%;
-    max-width: 500px;
-    margin: 20px auto;
+    width: 350px;
     padding: 20px;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 h2 {
     color: #ffcc00;
-    margin-bottom: 20px;
 }
 
 form {
@@ -40,60 +42,78 @@ label {
     margin-bottom: 5px;
 }
 
+input[type="number"],
 input[type="text"],
 input[type="date"] {
     width: calc(100% - 22px);
-    padding: 10px;
+    padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
-    font-size: 16px;
-}
-
-input[type="text"] {
-    -webkit-appearance: none;
 }
 
 button[type="submit"] {
     width: 100%;
-    padding: 12px;
+    padding: 10px;
     background-color: #ffcc00;
-    color: #333;
+    color: #000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-size: 16px;
 }
 
 button[type="submit"]:hover {
     background-color: #ffdb4d;
 }
 
-#resultMessage {
-    margin-top: 20px;
-    font-size: 18px;
-}
-
-#viewResult {
+/* Добавляем стили для оверлея */
+.overlay {
     display: none;
-    margin-top: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-    font-size: 16px;
-    color: #333;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loadingText {
+    margin-top: 10px;
+}
+
+.viewResultButton {
+    margin-top: 20px;
+}
+
+.viewResultButton a {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
     text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
-@media (max-width: 500px) {
-    input[type="text"],
-    input[type="date"] {
-        width: calc(100% - 20px);
-    }
-}
-
-@media (max-width: 320px) {
-    input[type="text"],
-    input[type="date"] {
-        width: calc(100% - 10px);
-    }
+.viewResultButton a:hover {
+    background-color: #2980b9;
 }
