--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+/* Анимация загрузки */
+.loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #3498db;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin: 20px auto;
+    display: none; /* По умолчанию скрыт */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Остальные стили */
 body {
     background-color: #fff;
     color: #000;
@@ -43,8 +61,7 @@ label {
 }
 
 input[type="number"],
-input[type="text"],
-input[type="date"] {
+input[type="text"] {
     width: calc(100% - 22px);
     padding: 8px;
     border-radius: 5px;
@@ -68,7 +85,7 @@ button[type="submit"]:hover {
 }
 
 /* Добавляем стили для оверлея */
-.overlay {
+#overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -83,37 +100,11 @@ button[type="submit"]:hover {
     text-align: center;
 }
 
-.loader {
-    border: 8px solid #f3f3f3;
-    border-top: 8px solid #3498db;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
+#overlay img {
+    width: 100px; /* Размер анимированного GIF */
+    height: auto;
 }
 
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-
-.loadingText {
+#loadingText {
     margin-top: 10px;
-}
-
-.viewResultButton {
-    margin-top: 20px;
-}
-
-.viewResultButton a {
-    padding: 10px 20px;
-    background-color: #3498db;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.viewResultButton a:hover {
-    background-color: #2980b9;
 }
